Add missing translation to non-EN locales
Signed-off-by: Geoff Wilson <geoff@gr-oss.io>

--- a/webview-ui/src/i18n/locales/ca/settings.json
+++ b/webview-ui/src/i18n/locales/ca/settings.json
@@ -410,7 +410,8 @@
 			"placeholder": "Per defecte: claude",
 			"maxTokensLabel": "Tokens màxims de sortida",
 			"maxTokensDescription": "Nombre màxim de tokens de sortida per a les respostes de Claude Code. El valor per defecte és 8000."
-		}
+		},
+		"apiKeyUseEnvVar": "Utilitzar clau API de la variable d'entorn {{name}}"
 	},
 	"browser": {
 		"enable": {
